--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <header class="site-header">
-  <a href="{{ site.baseurl }}/" class="logo"><span class="logo"><amp-img src="{{ site.baseurl }}{{ site.logo }}"  height="80" /></span></a>
+  <a href="{{ site.baseurl }}/" class="logo"><span class="logo"><img src="../assets/images/logo.png"  height="50" /></span></a>
 
   <div class="page-links">
-    <a class="page-link" href="{{ site.baseurl }}/">Home</a>
+    <a class="page-link" href="https://www.userlook.co/">Home</a>
     {% for my_page in site.pages %}
       {% if my_page.title %}
-      • <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+      &nbsp;|&nbsp; <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
       {% endif %}
     {% endfor %}
   </div>
