--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a href="www.userlook.co" class="logo"><span class="logo"><img src="{{ site.baseurl }}/assets/images/logo.png"  height="50" /></span></a>
+  <a href="https://www.userlook.co" class=""><span class="logo"><img src="{{ site.baseurl }}/assets/images/logo.png"  height="50" /></span></a>
 
   <div class="page-links">
     <a class="page-link" href="https://blog.userlook.co/">Home</a>
