--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -63,8 +63,8 @@ body {
 .site-header {
   position: relative;
   width: 100%;
-  max-width: 700px;
-  margin: 16px auto 0 auto;
+  margin: 30px auto 0 auto;
+  padding: 0 30px 0 30px;
   @include box-sizing(border-box);
   @include respond-to(800) {
     padding: 0 $rs * 1;
