--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -16,7 +16,9 @@ $grey-color:       #828282;
         }
     }
 }
-
+.img {
+  max-width: 99%;
+}
 amp-img {
   background-color: grey;
   max-width: 700px;
