css file update

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -50,7 +50,7 @@ main {
 
 body {
   background-color: #fff;
-  font-family: $font-serifs;
+  font-family: $font-serif;
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
