css file update

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -265,7 +265,7 @@ body {
 
   .post-content {
     width: 100%;
-    font-family: $font-sanss;
+    font-family: $font-sans;
     color: #555555;
     h1, h2, h3 {
       font-family: $font-sans;
