--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -52,7 +52,7 @@ main {
 
 body {
   background-color: #fff;
-  font-family: $font-serif;
+  font-family: $font-sans;
   margin: 0;
   padding: 0;
   text-rendering: optimizeLegibility;
