css file update

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -19,7 +19,8 @@ $grey-color:       #828282;
 img {
   max-width: 99%;
   text-align: center;
-  margin:   auto;
+  margin: auto;
+  display: block;
 }
 amp-img {
   background-color: grey;
