--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -2,7 +2,12 @@
 @import 'syntax-highlighting';
 
 $grey-color:       #828282;
+.logo {
+  position: absolute;
+  left: 20px;
+  
 
+}
 .icon {
 
     > svg {
@@ -68,6 +73,7 @@ body {
 .site-header {
   position: relative;
   width: 100%;
+  height: 80px;
   margin: 30px auto 0 auto;
   padding: 0 30px 0 30px;
   @include box-sizing(border-box);
