--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -23,7 +23,7 @@ $grey-color:       #828282;
 }
 iframe {
   display: block;
-  margin: 20px auto auto auto;
+  margin: 20px auto 0px auto;
 }
 img {
   max-width: 99%;
