css file update

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -28,7 +28,7 @@ iframe {
 img {
   max-width: 99%;
   text-align: center;
-  margin: auto;
+  margin: 20px auto 20px auto;
   display: block;
 }
 amp-img {
