blog index show images

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -22,6 +22,12 @@ $grey-color:       #828282;
         }
     }
 }
+.article-item{
+  a {
+    text-decoration:none;s
+  }
+
+}
 iframe {
   display: block;
   margin: 20px auto 0px auto;
