--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -286,6 +286,7 @@ body {
     color: #666;
     h1, h2, h3 {
       font-family: $font-sans;
+      color:black;
     }
     h3, h4, h5, h6 {
       letter-spacing: -0.02em;
