--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -309,6 +309,7 @@ body {
       line-height: 1.2;
       margin-top: 50px;
       margin-bottom: 0px;
+      color:black;
     }
     table {
       border-collapse: collapse;
