--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -150,8 +150,8 @@ body {
   }
 
   article {
-    padding: 20px 0;
-    border-bottom: 1px solid #f2f2f0;
+    padding: 30px 0;
+    border-bottom: 1px solid #e2e2e2;
     &:last-child {
       border-bottom: 0px;
     }
