--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,5 @@
 <footer class="site-footer">
-  <a class="subscribe" href="http://www.userlook.co"> <span class="tooltip"> <i class="fa fa-rss"></i>Try out UserLook</span></a>
     <div class="inner">
-         <section class="copyright">All content copyright <a href="mailto:{{ site.email}}">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }} &bull; All rights reserved.</section>
+         <section class="copyright">  &copy; {{ site.time | date: '%Y' }} &nbsp; {{ site.name }} &bull; <a href="http://www.userlook.co/"> Start Testing </a> &bull; <a href="http://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a> </section>
     </div>
 </footer>
