--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -48,7 +48,7 @@ layout: default
         <h5 class="index-headline featured"><span>Supported by</span></h5>
         <footer class="site-footer">
           <div class="inner">
-            <section class="copyright">All content copyright <a href="mailto:{{ site.email}}">{{site.name}}</a> &copy; {{ site.time | date: '%Y' }}<br>All rights reserved.</section>
+            <section class="copyright"> &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="http://www.userlook.co/">{{ site.name }}</a> &bull; <a href="http://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a></section>
           </div>
         </footer>
       </div>
