--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@ layout: default
         </section>
       </div>
       <div class="isRight">
-        <h5 class="index-headline featured"><span>Supported by</span></h5>
+        <h5 class="index-headline featured"><span>About</span></h5>
         <footer class="site-footer">
           <div class="inner">
             <section class="copyright"> &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="http://www.userlook.co/">{{ site.name }}</a> &bull; <a href="http://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a></section>
