--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -140,7 +140,10 @@ body {
     font-weight: 300;
   }
 }
+ .post-header {
+    font-size:36px;
 
+ }
 .content {
   width: 100%;
   max-width: 700px;
@@ -161,7 +164,7 @@ body {
       font-weight: 700;
       font-style: normal;
       display: block;
-      font-size: 32px;
+      font-size: 42px;
       line-height: 1.15;
       margin: 0 0;
       a {
@@ -177,8 +180,8 @@ body {
       font-weight: 300;
       font-style: normal;
       font-size: 20px;
-      line-height: 1.59;
-      color: #8c8c8c;
+      line-height: 1.65;
+      color: $darkgrey-color;
       font-family: $font-serif;
     }
     .post-meta {
@@ -251,7 +254,7 @@ body {
     font-weight: 700;
     font-style: normal;
     letter-spacing: -0.04em;
-    font-size: 50px;
+    font-size: 42px;
     line-height: 1.1;
     color: #333332;
     margin-bottom: 50px;
@@ -323,8 +326,8 @@ body {
     p {
       font-weight: 400;
       font-style: normal;
-      font-size: 18px;
-      line-height: 1.59;
+      font-size: 20px;
+      line-height: 1.65;
       letter-spacing: -.002em;
       margin-top: 30px;
       margin-bottom: 0;
@@ -367,19 +370,18 @@ body {
     blockquote {
       margin: 0 0 30px;
       margin-left: -26px;
-      border-left: 3px solid #57ad68;
-      padding-left: 20px;
+      padding-left: 10%;
       p {
         letter-spacing: 0.01rem;
         font-weight: 300;
         mpadding-left: 50px;
         mmargin-left: -26px;
         padding-bottom: 3px;
-        font-size: 27px;
+        font-size: 28px;
         font-style: italic;
         font-family: "Lato";
         color: #828282;
-        width: 80%;
+        width: 85%;
       }
     }
     ul, ol {
@@ -390,7 +392,7 @@ body {
       padding: 0;
       font-weight: 400;
       font-style: normal;
-      font-size: 18px;
+      font-size: 20px;
       line-height: 30px;
       margin-left: 30px;
       margin-bottom: 12px;
