--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -165,8 +165,9 @@ body {
       font-weight: 700;
       font-style: normal;
       display: block;
-      font-size: 39px;
+      font-size: 42px;
       line-height: 1.15;
+      font-family: $font-sans;
       margin: 0 0;
       a {
         text-decoration: none;
