--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -53,6 +53,7 @@ $rs: 16px;
 $font-serif: Georgia, serif;
 $font-sans: 'Karla', Helvetica, sans-serif;
 $font-sans-body: Helvetica, sans-serif;
+$font-sans-quote: 'Lato';
 
 @mixin respond-to($breakpoint) {
   @media only screen and (max-width: $breakpoint + px) {
@@ -326,7 +327,7 @@ body {
       text-align:left;
     }
     p {
-      font-weight: 400;
+      font-weight: 300;
       font-style: normal;
       font-size: 21px;
       line-height: 1.77;
@@ -378,12 +379,13 @@ body {
         font-weight: 300;
         mpadding-left: 50px;
         mmargin-left: -26px;
-        padding-bottom: 3px;
-        font-size: 28px;
+        padding-bottom: 15px;
+        font-size: 29px;
         font-style: italic;
         font-family: "Lato";
         color: #828282;
         width: 85%;
+        line-height: 1.65;
       }
     }
     ul, ol {
@@ -392,7 +394,7 @@ body {
     }
     li {
       padding: 0;
-      font-weight: 400;
+      font-weight: 300;
       font-style: normal;
       font-size: 21px;
       line-height: 30px;
