--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-  <a href="https://blog.userlook.co" class=""><span class="logo"><img src="{{ site.baseurl }}/assets/images/logo.png"  height="6s0" /></span></a>
+  <a href="https://blog.userlook.co" class=""><span class="logo"><img src="{{ site.baseurl }}/assets/images/logo.png"  height="60" /></span></a>
 
   <div class="page-links">
     <a class="page-link" href="https://www.userlook.co/">UserLook</a>
