--- a/newhomepage/assets/css/style.css
+++ b/newhomepage/assets/css/style.css
@@ -211,7 +211,7 @@ p {
   z-index: -1; }
 
 .cover-bg__top {
-  top: -150px;
+  top: -162px;
   left: 10%;
   }
 
@@ -252,24 +252,27 @@ p {
 
 /* Header */
 .logo {
-  width: 98px;
+  width: 96px;
   height: 71px;
   background-image: url(../images/logo.png);
-  background-size: cover;
-  text-indent: -9999px; }
+  background-size: contain;
+  text-indent: -9999px;
+  background-repeat: no-repeat;
+  background-position: center;
+  }
 .sticky {
     position: fixed;
     top: 0px;
     width: 100%;
     left: 0px;
     background-color: white;
-    height: 117px;
+    height: 106px;
     z-index: 100;
-    box-shadow: 0 0 48px rgba(0, 0, 0, 0.07);
-    margin: -33px 0 0 0;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.07);
+    margin: -25px 0 0 0;
     }
 .logoswitch {
-  width: 72px;
+  width: 70px;
   background-image: url(../images/logo_eyes.png);
   background-size: contain;
   text-indent: -9999px;
@@ -278,16 +281,17 @@ p {
   /* background-position-x: 20px; */
   }
 .header {
-  padding: 38px 0;
+  padding: 28px 0;
   }
   .header .navbar {
     padding: 0; }
     .header .navbar .nav-link {
       position: relative;
-      font-size: 20px;
+      font-size: 19px;
       font-family: "Karla", sans-serif;
       font-weight: 700;
-      line-height: 40px; }
+      line-height: 40px;
+      }
       .header .navbar .nav-link:not(.btn) {
         margin: 0 28px;
         padding: 8px 0;
@@ -417,7 +421,7 @@ p {
       background-position: center 65%; } }
 
 .home-page .section-CTA {
-  padding: 150px 0; }
+  padding: 40px 0 140px 0; }
   @media screen and (max-width: 991px) {
     .home-page .section-CTA {
       padding: 75px 0; } }
@@ -591,7 +595,7 @@ p {
 .examples-page .page:before {
     content: '';
     position: absolute;
-    top: 550px;
+    margin-top: 325px;
     width: 100%;
     height: 754px;
     background-color: #FFF9F4;
