--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,9 +18,10 @@ layout: default
           {% include icon-twitter.html %}
         </a>
       </section>
+      <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
     </footer>
     <div class="bottom-teaser cf">
-      <div class="isLeft">
+      <div class="">
         <h5 class="index-headline featured"><span>Written by</span></h5>
         <section class="author">
           <div class="author-image"></div>
@@ -40,17 +41,7 @@ layout: default
               {% endif %}
             </span>
           </p>
-          <hr>
-          <p class="published">Published <time datetime="{{ page.date | date: "%F %R" }}">{{ page.date | date_to_string }}</time></p>
         </section>
-      </div>
-      <div class="isRight">
-        <h5 class="index-headline featured"><span>About</span></h5>
-        <footer class="site-footer">
-          <div class="inner">
-            <section class="copyright"> &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="http://www.userlook.co/">{{ site.name }}</a> &bull; <a href="http://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a></section>
-          </div>
-        </footer>
       </div>
     </div>
   </article>
