--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 
     </footer>
     <div class="bottom-teaser cf">
-      <div class="">
+      <div class="isLeft">
         <h5 class="index-headline featured"><span>Written by</span></h5>
         <section class="author">
           <div class="author-image"></div>
