--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -423,6 +423,7 @@ body {
     }
     .isLeft {
       width: 95%;
+      margin-bottom: 70px;
       @include box-sizing(border-box);
       @include respond-to(800) {
         width: 100%;
