footer copy edit

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
     <div class="inner">
-         <section class="copyright">  &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="https://userlook.co/">{{ site.name }}</a> &bull; <a href="https://userlook.co/"> Start Testing </a> &bull; <a href="https://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a> </section>
+         <section class="copyright">  &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="https://userlook.co/">UserLook</a> &bull; <a href="https://userlook.co/"> Start Testing </a> &bull; <a href="https://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a> </section>
     </div>
 </footer>
