--- a/newhomepage/assets/css/style.css
+++ b/newhomepage/assets/css/style.css
@@ -141,7 +141,7 @@ p {
 /* section */
 .section {
   position: relative;
-  padding: 84px 0;
+  padding: 74px 0;
   }
   @media screen and (max-width: 991px) {
     .section {
@@ -152,7 +152,7 @@ p {
 .lead {
   font-family: "Georgia", sans;
   font-size: 21px;
-  line-height: 32px;
+  line-height: 34px;
   color: #5d5d5d;
   }
   .lead.lead-md {
@@ -358,7 +358,7 @@ p {
 
 /* Hero */
 .hero {
-  padding: 44px 0;
+  padding: 74px 0;
   }
   .hero .hero-title {
     margin-bottom: 30px;
@@ -366,17 +366,19 @@ p {
 
 /* Video Section */
 .video-section {
-  padding-top: 44px;
+  padding-top: 74px;
   }
   .video-section .video-btn {
-    margin-top: 58px; }
+    margin-top: 58px;
+    }
   .video-section:before {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 410px;
+    height: 460px;
     background-color: #fff9f4;
-    content: ''; }
+    content: '';
+    }
     @media screen and (max-width: 991px) {
       .video-section:before {
         height: 250px; } }
@@ -392,17 +394,17 @@ p {
   @media screen and (min-width: 992px) {
     .feature.datainsight .feature-img {
       left: -28.85%;
-      width: 580px;
+      width: 750px;
       /* height: 510px; */
       }
     .feature.sarttesting .feature-img {
       right: -15%;
-      width: 491px;
+      width: 750px;
       /* height: 606px; */
       }
     .feature.team .feature-img {
       left: -21.5%;
-      width: 487px;
+      width: 770px;
       /* height: 493px; */
       } }
   .feature .feature-img {
@@ -432,8 +434,9 @@ p {
 
 /* Testimonials */
 .testimonials {
-  padding-top: 150px;
-  background-color: #fffaf6; }
+  padding-top: 190px;
+  background-color: #fffaf6;
+  }
   @media screen and (max-width: 991px) {
     .testimonials {
       padding-top: 75px; } }
@@ -572,7 +575,8 @@ p {
     margin-bottom: 28px;
     font-size: 28px;
     font-weight: 700;
-    line-height: 30px; }
+    line-height: 34px;
+    }
 
 /* Page */
 .page {
