--- a/newhomepage/assets/css/style.css
+++ b/newhomepage/assets/css/style.css
@@ -120,13 +120,41 @@ p {
   border-radius: 31px;
   background-color: #ffffff;
   box-shadow: 0 0 48px rgba(0, 0, 0, 0.07); }
+/* Company logos */
+.company-logos {
+    position: relative;
+    width: 100vw;
+    left: calc(-48vw + 50%);
+    margin-bottom: 50px;
 
+}
+  .company-logos .companylogo_img{
+  margin-right:90px;
+  margin-bottom: 50px;
+  vertical-align: middle;
+  }
+  @media screen and (max-width: 991px) {
+    .company-logos {
+      position: relative;
+      width: auto;
+      left: auto;
+      margin-bottom: 20px;
+
+    }
+      .company-logos .companylogo_img{
+        margin-right: 20px;
+        margin-bottom: 50px;
+        vertical-align: middle;
+        max-height: 25px;
+      }
+  }
 /* Video card */
 .video-card {
   max-width: 778px;
   height: auto;
   border: none;
   background-color: transparent;
+  margin-bottom: 100px;
   }
   .video-card .card-img-overlay {
     margin-top: 18%; }
@@ -152,7 +180,7 @@ p {
 .lead {
   font-family: "Georgia", sans;
   font-size: 21px;
-  line-height: 34px;
+  line-height: 32px;
   color: #5d5d5d;
   }
   .lead.lead-md {
@@ -367,21 +395,23 @@ p {
 /* Video Section */
 .video-section {
   padding-top: 74px;
+  padding-bottom: 100px;
   }
   .video-section .video-btn {
-    margin-top: 58px;
+/*    margin-top: 86px;*/
     }
   .video-section:before {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 460px;
+    height: 589px;
     background-color: #fff9f4;
     content: '';
     }
     @media screen and (max-width: 991px) {
       .video-section:before {
-        height: 250px; } }
+        height: 610px;
+        } }
 
 /* Features */
 .feature {
@@ -613,7 +643,7 @@ p {
     background-color: #FFF9F4;
 }
 .examples-page .feature {
-  padding-top: 190px; }
+  padding-top: 100px; }
   @media screen and (max-width: 991px) {
     .examples-page .feature {
       padding: 95px 0 0; } }
