--- a/newhomepage/assets/css/style.css
+++ b/newhomepage/assets/css/style.css
@@ -119,7 +119,8 @@ p {
   padding: 26px 34px;
   border-radius: 31px;
   background-color: #ffffff;
-  box-shadow: 0 0 48px rgba(0, 0, 0, 0.07); }
+  box-shadow: 0 0 48px rgba(0, 0, 0, 0.07); 
+  text-align:center;}
 /* Company logos */
 .company-logos {
     position: relative;
@@ -161,11 +162,14 @@ p {
   .video-card .video-card__text {
     font-size: 22px;
     font-weight: 700; }
+  .card-title {
+    line-height: 36px; }
 
 @media screen and (max-width: 567px) {
   .video-card__play {
     width: 40px;
     height: auto; } }
+
 /* section */
 .section {
   position: relative;
@@ -659,9 +663,9 @@ p {
   z-index: -1; }
 .examples-page .target-feature-bg-1 {
   top: 170px;
-  right: -82px; }
+  right: -182px; }
 .examples-page .target-feature-bg-2 {
-  left: -275px;
+  left: -125px;
   bottom: 0; }
 .examples-page .target-feature-bg-3 {
   top: 0;
