--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,4 +2,6 @@
     <div class="inner">
          <section class="copyright">  &copy; {{ site.time | date: '%Y' }} &nbsp; <a href="https://userlook.co/">UserLook</a> &bull; <a href="https://userlook.co/"> Start Testing </a> &bull; <a href="https://www.twitter.com/userlookco">Follow Us &bull; <a href="mailto:{{ site.email}}">Contact Us</a> </section>
     </div>
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"860d136aff704f9b240ce24cf","lid":"8f13ab535a","uniqueMethods":true}) })</script>
+
 </footer>
