--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -1,13 +1,15 @@
 @import 'bourbon/bourbon';
 @import 'syntax-highlighting';
-
+a{
+  color:#000;
+}
 $grey-color:       #828282;
 $darkgrey-color:   #464646;
 .logo {
   position: absolute;
   left: 20px;
   top: -19px;
-  
+
 
 }
 .icon {
@@ -26,6 +28,7 @@ $darkgrey-color:   #464646;
 .article-item{
   a {
     text-decoration:none;
+    color:#000;
   }
 
 }
@@ -38,6 +41,7 @@ img {
   text-align: center;
   margin: 20px auto 20px auto;
   display: block;
+  border: 1px #eaeaea solid;
 }
 amp-img {
   background-color: grey;
